# ai-call-analysis-pipeline

./: README.md
call_analysis_pipeline/: main.py  pyproject.toml  run_build_index.py  run_full_pipeline.py  run_search_cli.py
call_analysis_pipeline/app/: analysis_compliance.py  analysis_intent_topics.py  analysis_outcome.py  analysis_quality.py  analysis_runner.py  analysis_sentiment.py  dashboard.py  ingestion.py  schemas.py  storage.py  transcription.py  vectorstore.py
call_analysis_pipeline/config/: config.example.yaml  config.yaml
call_analysis_pipeline/data/calls/: Customer-Support-Audio-Sample-English-Jay-_-Thea-VEED_1763760071.json  Inbound-Sales-Audio-Sample-Josh_Mary-VEED_1763760119.json  conversation_1580134208.json
